# sparrow-cvat

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  requirements-dev.txt  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
sparrow_cvat/: __init__.py  __main__.py  annotations.py  api.py  auth.py  cloud_storage.py  jobs.py  projects.py  tasks.py  utils.py
sparrow_cvat/dataset_manifest/: __init__.py  core.py  create.py  utils.py
