[metadata]
name = sparrow-cvat
version = 0.3.2
author = Sparrow Computing
author_email = ben@sparrow.dev

[options]
install_requires = 
    av
    datumaro<1.0.0
    cvat-sdk<2.4.0
    fire
    natsort
    opencv-python
    pandas
    sparrow-datums
    tqdm
    xmltodict

[options.extras_require]
dev =
    black
    isort
    jupyter
    pydocstyle
    pylint
    pytest
    pytest-cov

[options.entry_points]
console_scripts = 
    sparrow-cvat = sparrow_cvat.__main__:main

[pylint.FORMAT]
disable = all
enable = unused-import