[metadata]
name = sparrow-cvat
version = 1.1.0
author = Sparrow Computing
author_email = ben@sparrow.dev

[options]
install_requires =
    cvat-sdk==2.5.2
    fire
    pillow
    requests
    tqdm

[options.extras_require]
video =
    opencv-python

dev =
    black
    isort
    jupyter
    pydocstyle
    pylint
    pytest
    pytest-cov

[options.entry_points]
console_scripts = 
    sparrow-cvat = sparrow_cvat.__main__:main

[pylint.FORMAT]
disable = all
enable = unused-import