[metadata]
name = sparrow-cvat
version = 1.2.0
author = Sparrow Computing
author_email = ben@sparrow.dev

[options]
install_requires =
    cvat-sdk==2.15.0
    fire
    pillow
    python-dotenv
    requests
    tqdm

[options.extras_require]
video =
    opencv-python

dev =
    jupyter
    pytest
    pytest-cov
    uv

[options.entry_points]
console_scripts = 
    sparrow-cvat = sparrow_cvat.__main__:main

[pylint.FORMAT]
disable = all
enable = unused-import